   * Fix casing in OCR for italian letter "Ú"
   * Fix "Import plain text" for small resolutions - thx doquan0
   * Fix syntax coloring after replace - thx OmrSi
   * Fix minor label issue at startup - thx Bill
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix crash on very very long text lines
   * Fix bug with multi-line-bold in export/box-for-each-line - thx thehulk


3.5.16 (16th June 2020)
* NEW:
   * OCR method "nOCR" (vector based with auto training) - thx Janusz
   * Enable custom color for waveform cursor
   * New shortcuts to move start/end one frame
   * New shortcuts to move start/end with gap - thx matmaggi/Fhining/btsix
   * Add move shortcuts to waveform (arrow left/right) - thx Shaddy
   * Add shortcut for "add waveform" - thx Bill
   * Add shortcuts for "go to prev/next sub and play"
   * Add new subtitle format - thx Matmanamane
   * Add new subtitle format "Speechmatics" - thx Rene
   * Add new json sub formats - thx Steven
   * Add new sub format - thx Luke
   * Add new formats - thx Hai-Lag 
   * Add Bulgarian no-break-after-list - thx Eva
   * Add "More than two lines" to "Modify selection"
   * Settings: Small helper window to calc gap in frames
   * Add "Center, right justify" to image export - thx waelmohammed5
   * Add Malayalam spell check dictionary download
* IMPROVED:
   * Improve italic-space-detection in "Binary image comp" - thx tormento
   * Many minor improvements to OCR (find/new shortcuts/preview and more)
   * Update Bulgarian translation - thx KalinM
   * Update Greek translation - thx Lero91
   * Update Basque translation - thx Xabier
   * Update Romanian translation - thx Mircea
   * Update Chinese translation - thx LeonCheung
   * Update Polish translation - thx admas
   * Update Portuguese translation - thx moob
   * Update Greek translation - thx Lero91
   * Init no-break-after-list with language
   * Make quick-char-list in "OCR Char" window dynamic
   * Remember settings for "column paste"